[gd_scene load_steps=2 format=3 uid="uid://recording_hud_v3"]

[ext_resource type="Script" path="res://scripts/ui/RecordingHUD.gd" id="1_hud"]

[node name="RecordingHUD" type="Control"]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -150.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_hud")

[node name="ControlPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBox" type="HBoxContainer" parent="ControlPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 20.0
offset_right = 150.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Btn_Rec" type="Button" parent="ControlPanel/HBox"]
layout_mode = 2
text = "‚óè NAHR√ÅVAT"

[node name="Btn_Stop" type="Button" parent="ControlPanel/HBox"]
layout_mode = 2
text = "‚ñ† STOP"

[node name="Btn_Play" type="Button" parent="ControlPanel/HBox"]
layout_mode = 2
text = "‚ñ∂ P≈òEHR√ÅT"

[node name="Btn_Equip" type="Button" parent="ControlPanel/HBox"]
layout_mode = 2
text = "üõ† VYBAVEN√ç"

[node name="TimeSlider" type="HSlider" parent="ControlPanel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -10.0
offset_right = -50.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
max_value = 600.0

[node name="TimeLabel" type="Label" parent="ControlPanel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -40.0
offset_right = -20.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
text = "0.00 s"
horizontal_alignment = 2

[node name="CharacterList" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = -600.0
offset_right = 200.0
offset_bottom = -540.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CharacterList"]
layout_mode = 2
alignment = 1

[node name="TimelineContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -300.0
offset_right = -20.0
offset_bottom = -160.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 5
alignment = 2
